--- a/Resources/Private/Language/Database.xlf
+++ b/Resources/Private/Language/Database.xlf
@@ -86,6 +86,9 @@
 			<trans-unit id="tt_content.pi_flexform.rawAdditionalAuthorizeParameters">
 				<source><![CDATA[Additional query parameters for authentication (e.g. "access_type=offline&connection=google-oauth2")]]></source>
 			</trans-unit>
+			<trans-unit id="tt_content.pi_flexform.referrerAnchor">
+				<source>Anchor for the referrer/callback url</source>
+			</trans-unit>
 			<trans-unit id="tt_content.pi_flexform.sheet_redirect">
 				<source>Redirects</source>
 			</trans-unit>
