--- a/Resources/Private/Language/de.Database.xlf
+++ b/Resources/Private/Language/de.Database.xlf
@@ -86,6 +86,9 @@
 			<trans-unit id="tt_content.pi_flexform.rawAdditionalAuthorizeParameters">
 				<target><![CDATA[Additional query parameters for authentication (e.g. "access_type=offline&connection=google-oauth2")]]></target>
 			</trans-unit>
+			<trans-unit id="tt_content.pi_flexform.referrerAnchor">
+				<target>Anker für die Referrer/Callback url</target>
+			</trans-unit>
 			<trans-unit id="tt_content.pi_flexform.sheet_redirect">
 				<target>Weiterleitungen</target>
 			</trans-unit>
