--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -1,57 +1,54 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2017-09-12T18:29:16Z"
-		  product-name="auth0">
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+	<file source-language="en" datatype="plaintext" original="EXT:auth0/Resources/Private/Language/locallang_be.xlf" date="2022-02-16T09:59:25Z" product-name="auth0">
 		<header/>
 		<body>
-			<trans-unit id="plugin.loginForm.title">
+			<trans-unit id="plugin.loginForm.title" resname="plugin.loginForm.title">
 				<source>Login form</source>
 			</trans-unit>
-			<trans-unit id="plugin.loginForm.description">
+			<trans-unit id="plugin.loginForm.description" resname="plugin.loginForm.description">
 				<source>Login form for Auth0 and TYPO3</source>
 			</trans-unit>
-
-			<trans-unit id="tx_auth0_backend_layout_wizard_label">
+			<trans-unit id="tx_auth0_backend_layout_wizard_label" resname="tx_auth0_backend_layout_wizard_label">
 				<source>Auth0</source>
 			</trans-unit>
-
-			<trans-unit id="form.login.typo3">
+			<trans-unit id="form.login.typo3" resname="form.login.typo3">
 				<source>Log in to TYPO3</source>
 			</trans-unit>
-			<trans-unit id="form.login.copyright">
+			<trans-unit id="form.login.copyright" resname="form.login.copyright">
 				<source>More about Auth0</source>
 			</trans-unit>
-			<trans-unit id="form.login.copyright.description">
+			<trans-unit id="form.login.copyright.description" resname="form.login.copyright.description">
 				<source>Auth0 is the solution you need for web, mobile, IoT, and internal applications. Loved by developers and trusted by enterprises.</source>
 			</trans-unit>
-			<trans-unit id="form.logout.auth0">
+			<trans-unit id="form.logout.auth0" resname="form.logout.auth0">
 				<source>Log out from Auth0</source>
 			</trans-unit>
-			<trans-unit id="form.login.auth0">
+			<trans-unit id="form.login.auth0" resname="form.login.auth0">
 				<source>Log in to Auth0</source>
 			</trans-unit>
-			<trans-unit id="form.logged-in-as">
+			<trans-unit id="form.logged-in-as" resname="form.logged-in-as">
 				<source>Hello</source>
 			</trans-unit>
-			<trans-unit id="form.not-logged-in">
+			<trans-unit id="form.not-logged-in" resname="form.not-logged-in">
 				<source><![CDATA[You are currently <strong>not</strong> logged in to Auth0.]]></source>
 			</trans-unit>
-			<trans-unit id="form.error.no_application.title">
+			<trans-unit id="form.error.no_application.title" resname="form.error.no_application.title">
 				<source>No Application</source>
 			</trans-unit>
-			<trans-unit id="form.error.no_application.description">
+			<trans-unit id="form.error.no_application.description" resname="form.error.no_application.description">
 				<source>Please choose an application, which should be used for log in to TYPO3.</source>
 			</trans-unit>
-			<trans-unit id="form.error.no_typoscript.title">
+			<trans-unit id="form.error.no_typoscript.title" resname="form.error.no_typoscript.title">
 				<source>No TypoScript</source>
 			</trans-unit>
-			<trans-unit id="form.error.no_typoscript.description">
+			<trans-unit id="form.error.no_typoscript.description" resname="form.error.no_typoscript.description">
 				<source>No settings for TYPO3 backend found. TypoScript included?</source>
 			</trans-unit>
-			<trans-unit id="form.logged-in.success.title">
+			<trans-unit id="form.logged-in.success.title" resname="form.logged-in.success.title">
 				<source>Well done!</source>
 			</trans-unit>
-			<trans-unit id="form.logged-in.success.description">
+			<trans-unit id="form.logged-in.success.description" resname="form.logged-in.success.description">
 				<source>You have successfully logged in.</source>
 			</trans-unit>
 		</body>
