[TASK] Change namespace to Leuchtfeuer; minor refactoring - TER-98 TER-105

--- a/Documentation/About/Changelog/3-0-0.rst
+++ b/Documentation/About/Changelog/3-0-0.rst
@@ -23,8 +23,8 @@ Added
 Deprecated
 ==========
 
-* Constant :php:`AUTH_LOGIN_PROVIDER` of class :php:`\Bitmotion\Auth0\Service\AuthenticationService`
-* Following methods of the utility class :php:`\Bitmotion\Auth0\Utility\UserUtility`:
+* Constant :php:`AUTH_LOGIN_PROVIDER` of class :php:`\Leuchtfeuer\Auth0\Service\AuthenticationService`
+* Following methods of the utility class :php:`\Leuchtfeuer\Auth0\Utility\UserUtility`:
 
    * :php:`loginUser()`
    * :php:`logoutUser()`
